--- a/Tic_Tac_Toe/index.html
+++ b/Tic_Tac_Toe/index.html
@@ -25,7 +25,7 @@
             <button class="box"></button>
         </div>
     </div>
-    <button id="reset">Reset Game</button>
+    <button id="reset-btn">Reset Game</button>
 </body>
 <script src="app.js"></script>
 </html>
